<resources>
    <string name="app_name">PhoMix Filter</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="bottomHomeBanner_id">ca-app-pub-9047549049188735/6713146009</string>
    <string name="EditorBanner_id">ca-app-pub-9047549049188735/9221432805</string>
    <string name="GridMenuBanner_id">ca-app-pub-9047549049188735/1698166000</string>
    <string name="GridScreenBanner_id">ca-app-pub-9047549049188735/3174899206</string>

    <string name="borderOff">Border Off</string>
    <string name="borderColor">Border Color</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="negative">Negative</string>
    <string name="grayScale">GrayScale</string>
    <string name="rotate">Rotate</string>
    <string name="saturation">Saturation</string>
    <string name="sepia">Sepia</string>
    <string name="flip">Flip</string>
    <string name="grain">Grain</string>
    <string name="fill_light">Fill-Light</string>

    <string name="saveB">Save</string>
    <string name="select">Select</string>
    <string name="apply">Apply</string>
    <string name="undo">Undo</string>
    <color name="text_col">#ff816dff</color>
    <color name="back_col">#ffedffe6</color>
</resources>
