<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout android:layout_width="50dp"
        android:layout_height="60dp"
        android:orientation="vertical"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/linearLayout">
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:id="@+id/horizontalScrollView"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="35dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/borderOff"
                android:background="@drawable/bt_effect"
                android:layout_marginRight="5dp"
                android:tag="effects"
                android:id="@+id/bt00"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/borderColor"
                android:background="@drawable/bt_effect"
                android:layout_marginRight="5dp"
                android:tag="effects"
                android:id="@+id/bt0"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brightness"
                android:background="@drawable/bt_effect"
                android:layout_marginRight="5dp"
                android:tag="effects"
                android:id="@+id/bt1"
                 />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contrast"
                android:background="@drawable/bt_effect"
                android:layout_marginRight="5dp"
                android:tag="effects"
                android:id="@+id/bt2"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/negative"
                android:background="@drawable/bt_effect"
                android:layout_marginRight="5dp"
                android:tag="effects"
                android:id="@+id/bt3"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grayScale"
                android:background="@drawable/bt_effect"
                android:layout_marginRight="5dp"
                android:tag="effects"
                android:id="@+id/bt4"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rotate"
                android:background="@drawable/bt_effect"
                android:layout_marginRight="5dp"
                android:tag="effects"
                android:id="@+id/bt5"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturation"
                android:background="@drawable/bt_effect"
                android:layout_marginRight="5dp"
                android:tag="effects"
                android:id="@+id/bt6"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sepia"
                android:background="@drawable/bt_effect"
                android:layout_marginRight="5dp"
                android:tag="effects"
                android:id="@+id/bt7"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flip"
                android:background="@drawable/bt_effect"
                android:layout_marginRight="5dp"
                android:tag="effects"
                android:id="@+id/bt8"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grain"
                android:background="@drawable/bt_effect"
                android:layout_marginRight="5dp"
                android:tag="effects"
                android:id="@+id/bt9"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fill_light"
                android:background="@drawable/bt_effect"
                android:layout_marginRight="5dp"
                android:tag="effects"
                android:id="@+id/bt10"
                />
            </LinearLayout>
        </HorizontalScrollView>

    <!--<LinearLayout
        android:id="@+id/linny"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/skBar"
        android:padding="15dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout"></LinearLayout>-->


    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/skBar"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="5dp"
        android:secondaryProgress="0"
        android:layout_above="@+id/horizontalScrollView"
        android:layout_alignParentLeft="true"
        android:thumb="@drawable/progress_knob"
        android:progressDrawable="@drawable/progress_view"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text=""
        android:id="@+id/tvEffect"
        android:layout_above="@+id/skBar"
        android:layout_alignParentLeft="true" />

    <android.opengl.GLSurfaceView
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:id="@+id/effectsView"
        android:background="@android:color/transparent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:layout_above="@+id/tvEffect" />


</RelativeLayout>